Canard: Fix issues with widget block centre alignments.

--- a/canard/blocks.css
+++ b/canard/blocks.css
@@ -281,6 +281,17 @@ hr.wp-block-separator {
 5.0 Blocks - Widget Blocks
 --------------------------------------------------------------*/
 
+/* General Widget styles */
+
+.wp-block-categories.aligncenter,
+.wp-block-categories.aligncenter ul,
+.wp-block-archives.aligncenter,
+.wp-block-latest-posts.aligncenter,
+.wp-block-latest-comments.aligncenter {
+	list-style-position: inside;
+	text-align: center;
+}
+
 /* Latest Comments */
 
 .editor-block-list__block .wp-block-latest-comments__comment-meta a {
