--- a/canard/editor-blocks.css
+++ b/canard/editor-blocks.css
@@ -787,6 +787,14 @@
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
+/* Categories & Archives */
+
+.edit-post-visual-editor [data-align="center"] .wp-block-categories__list,
+.edit-post-visual-editor [data-align="center"] .wp-block-archives,
+.edit-post-visual-editor [data-align="center"] .wp-block-lastest-posts {
+	list-style-position: inside;
+}
+
 /* Latest Comments */
 
 .editor-block-list__block .wp-block-latest-comments__comment-meta a {
